--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@mantine/core": "^5.10.0",
+    "@react-icons/all-files": "^4.1.0",
     "bootstrap": "^5.2.3",
     "firebase": "^9.15.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@testing-library/react": "^13.3.0",
