--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mantine/core": "^5.10.0",
+    "@mantine/dates": "^5.10.0",
     "@react-icons/all-files": "^4.1.0",
     "bootstrap": "^5.2.3",
     "firebase": "^9.15.0",
