--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "start": "vite",
     "dev": "vite",
+    "cy:open": "cypress open --e2e",
     "build": "vite build",
     "serve": "vite preview",
     "test": "vitest --ui",
@@ -30,6 +31,7 @@
     "@vitest/coverage-c8": "^0.25.8",
     "@vitest/ui": "^0.25.8",
     "c8": "^7.12.0",
+    "cypress": "^12.4.1",
     "jsdom": "^20.0.3",
     "vite": "^4.0.0"
   }
