--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "start": "vite",
     "dev": "vite",
     "cy:open": "cypress open --e2e",
+    "em:start": "firebase emulators:start --import=./saved-data --export-on-exit",
+    "em:run": "firebase emulators:exec --import=./saved-data 'npm start'",
+    "em:execui": "firebase emulators:exec --ui --import=./saved-data 'npm start'",
     "build": "vite build",
     "serve": "vite preview",
     "test": "vitest --ui",
