removing ui flag

--- a/firebase.json
+++ b/firebase.json
@@ -24,7 +24,7 @@
       "port": 5000
     },
     "ui": {
-      "enabled": true
+      "enabled": false
     },
     "singleProjectMode": true
   }
