--- a/firebase.json
+++ b/firebase.json
@@ -12,5 +12,26 @@
         "destination": "/index.html"
       }
     ]
+  },
+  "emulators": {
+    "auth": {
+      "port": 9099,
+      "host": "127.0.0.1"
+
+    },
+    "database": {
+      "port": 9000,
+      "host": "127.0.0.1"
+
+    },
+    "hosting": {
+      "port": 8080,
+      "host": "127.0.0.1"
+
+    },
+    "ui": {
+      "enabled": true
+    },
+    "singleProjectMode": true
   }
 }
