--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "start": "vite",
     "dev": "vite",
     "cy:open": "cypress open --e2e",
-    "em:start": "firebase emulators:start --import=./saved-data --export-on-exit",
+    "em:start": "npm run build && firebase emulators:start --import=./saved-data --export-on-exit",
     "em:run": "firebase emulators:exec --import=./saved-data 'npm start'",
     "em:execui": "firebase emulators:exec --ui --import=./saved-data 'npm start'",
     "build": "vite build",
