--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "vite build --mode prod",
     "serve": "vite preview",
     "test": "vitest --ui",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "deploy": "npm run build && firebase deploy"
   },
   "dependencies": {
     "@mantine/core": "^5.10.0",
