--- a/firebase.json
+++ b/firebase.json
@@ -24,7 +24,7 @@
       "port": 8080
     },
     "ui": {
-      "enabled": false
+      "enabled": true
     },
     "singleProjectMode": true
   }
