--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "start": "vite",
     "dev": "vite",
     "cy:open": "cypress open --e2e",
-    "em:start": "vite build --mode dev && firebase emulators:start --import=./saved-data --export-on-exit",
+    "em:start": "npm run build dev && firebase emulators:start --import=./saved-data --export-on-exit",
+    "em:starttest": "firebase emulators:start --import=./saved-data --export-on-exit",
     "em:run": "firebase emulators:exec --import=./saved-data 'npm start'",
     "em:execui": "firebase emulators:exec --ui --import=./saved-data 'npm start'",
     "build": "vite build --mode prod",
+    "build dev": "vite build --mode dev",
     "serve": "vite preview",
     "test": "vitest --ui",
     "coverage": "vitest run --coverage",
