--- a/firebase.json
+++ b/firebase.json
@@ -15,13 +15,16 @@
   },
   "emulators": {
     "auth": {
-      "port": 9099
+      "port": 9099,
+      "host": "127.0.0.1"
     },
     "database": {
-      "port": 9000
+      "port": 9000,
+      "host": "127.0.0.1"
     },
     "hosting": {
-      "port": 8080
+      "port": 8080,
+      "host": "127.0.0.1"
     },
     "ui": {
       "enabled": true
