--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
           path: ~/.cache/firebase/emulators
           key: ${{ runner.os }}-firebase-emulators-${{ hashFiles('~/.cache/firebase/emulators/**') }}
 
-      - run: npm install -g firebase-tools --token "${{ secrets.FIREBASE_DEPLOY_TOKEN }}"
+      - run: npm install -g firebase-tools 
 
       - uses: cypress-io/github-action@v4
         with:
