--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,6 @@ jobs:
 
       - uses: cypress-io/github-action@v4
         with:
-          build: npm run build
+          build: npm run build:dev
           start: npm run em:start
           wait-on: http://localhost:8080
