--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,8 @@ jobs:
           node-version: '16'
       - run: npm i
       - run: CI=false npm run build:dev --if-present #npm run build --if-present; warnings == errors
+      - env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_DEPLOY_TOKEN }}
       - run: npm test
   
   cypress:
