--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,8 @@ jobs:
   build:
     name: Build and unit test
     runs-on: ubuntu-latest
+    env:
+      FIREBASE_TOKEN: ${{ secrets.FIREBASE_DEPLOY_TOKEN }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -16,8 +18,6 @@ jobs:
           node-version: '16'
       - run: npm i
       - run: CI=false npm run build:dev --if-present #npm run build --if-present; warnings == errors
-      - env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_DEPLOY_TOKEN }}
       - run: npm test
   
   cypress:
