--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,8 @@ jobs:
   build:
     name: Build and unit test
     runs-on: ubuntu-latest
+    env:
+      FIREBASE_TOKEN: ${{ secrets.FIREBASE_DEPLOY_TOKEN }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -13,8 +15,6 @@ jobs:
           node-version: '16'
       - run: npm i
       - run: CI=false npm run build:dev --if-present #npm run build --if-present; warnings == errors
-      - env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_DEPLOY_TOKEN }}
       - run: npm test
   
   cypress:
