--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-icons/all-files": "^4.1.0",
     "bootstrap": "^5.2.3",
     "firebase": "^9.15.0",
+    "jest-when": "^3.5.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
