--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@testing-library/react": "^13.3.0",
     "@vitejs/plugin-react": "^3.0.0",
     "@vitest/coverage-c8": "^0.25.8",
+    "@vitest/coverage-istanbul": "^0.29.2",
     "@vitest/ui": "^0.25.8",
     "c8": "^7.12.0",
     "cypress": "^12.4.1",
